<resources xmlns:tools="http://schemas.android.com/tools"  tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">Focus for Mastodon</string>
    <string name="extension_description">Displays the number of unread tweets, mentions and direct messages as they are updated.</string>
    <string name="menu_refresh">Refresh Timeline</string>
    <string name="menu_compose">New Tweet</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_follow">Follow User</string>
    <string name="menu_unfollow">Un-Follow User</string>
    <string name="menu_tweet">Send Tweet</string>
    <string name="menu_dm">Send Direct Message</string>
    <string name="menu_block">Block User</string>
    <string name="menu_unblock">Unblock User</string>
    <string name="menu_add_to_list">Add to List</string>
    <string name="menu_change_picture">Change Profile Picture</string>
    <string name="menu_change_bio">Change Profile Info</string>
    <string name="menu_change_banner">Change Profile Banner</string>
    <string name="menu_direct_message">New Direct Message</string>
    <string name="menu_save_image">Save Image</string>
    <string name="menu_favorite">Favorite User</string>
    <string name="menu_unfavorite">Un-Favorite User</string>
    <string name="menu_create_list">Create New List</string>
    <string name="menu_spam">Mark as Spam</string>
    <string name="just_now">just now</string>
    <string name="a_min_ago">a minute ago</string>
    <string name="minutes_ago">%s minutes ago</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hours_ago">%s hours ago</string>
    <string name="yesterday">yesterday</string>
    <string name="days_ago">%s days ago</string>
    <string name="mute">Mute</string>
    <string name="unmute">Un-Mute</string>
    <string name="muted_users">Muted Users</string>
    <string name="no_users">No Users</string>
    <string name="links">Links</string>
    <string name="pictures">Pictures</string>
    <string name="timeline">Home</string>
    <string name="mentions">Mentions</string>
    <string name="direct_messages">Direct Messages</string>
    <string name="retweets">Boosts</string>
    <string name="favorite_tweets">Liked Posts</string>
    <string name="favorite_users">Favorite Users</string>
    <string name="favorite_users_tweets">Favorite User Posts</string>
    <string name="trends">Trending</string>
    <string name="local_trends">Local</string>
    <string name="world_trends">World</string>
    <string name="search">Search</string>
    <string name="lists">Lists</string>
    <string name="list_item">List Item</string>
    <string name="search_hint">Search...</string>
    <string name="new_tweet">new post</string>
    <string name="new_tweets">new posts</string>
    <string name="no_new_tweets">No new posts</string>
    <string name="new_mention">new mention</string>
    <string name="new_mentions">new mentions</string>
    <string name="no_new_mentions">No new mentions</string>
    <string name="new_direct_message">new direct message</string>
    <string name="new_direct_messages">new direct messages</string>
    <string name="no_new_direct_messages">No new direct messages</string>
    <string name="new_account">New Account</string>
    <string name="from_top">from top</string>
    <string name="jump_to_top">To First</string>
    <string name="all_read">All Read!</string>
    <string name="view_new">Load?</string>
    <string name="old_interactions">All Interactions</string>
    <string name="tweet">Tweet</string>
    <string name="tweets">Posts</string>
    <string name="mention">Mention</string>
    <string name="message">Message</string>
    <string name="messages">Messages</string>
    <string name="new_message">new message</string>
    <string name="new_messages">new messages</string>
    <string name="mentioned_by">Mentioned by</string>
    <string name="message_from">Message from</string>
    <string name="mark_read">Read</string>
    <string name="noti_reply">Reply</string>
    <string name="popup">Popup</string>
    <string name="fav_user_tweets">new favorite user posts</string>
    <string name="sec_acc">Second Account</string>
    <string name="listening">Listening</string>
    <string name="listening_for_mentions">Listening for interactions</string>
    <string name="refreshing">Refreshing</string>
    <string name="refreshing_widget">Refreshing widget</string>
    <string name="downloading">Downloading</string>
    <string name="new_interaction_upper">New Interaction</string>
    <string name="new_interactions_lower">new interactions</string>
    <string name="new_interactions">New Interactions</string>
    <string name="retweeted">Boosts your post</string>
    <string name="favorited">Liked your post</string>
    <string name="quoted">quoted your status</string>
    <string name="followed">followed you</string>
    <string name="new_retweets">boosts</string>
    <string name="new_favorites">likes</string>
    <string name="new_quotes">quotes</string>
    <string name="setup_Focus_for_Mastodon">Setup Focus for Mastodon</string>
    <string name="login_to_twitter">Login to Mastodon</string>
    <string name="first_welcome">Welcome to Focus for Mastodon!</string>
    <string name="second_welcome">Syncing Data</string>
    <string name="third_welcome">That\'s it - enjoy!</string>
    <string name="back_to_timeline">Take me to my timeline!</string>
    <string name="initial_sync">Sync Now!</string>
    <string name="first_info">Before we get started, let\'s get you logged in and synced with Mastodon.</string>
    <string name="second_info">Great! We are now talking to Mastodon to sync your account.</string>
    <string name="third_info">Hope you enjoy Focus for Mastodon!</string>
    <string name="syncing_timeline">Syncing timeline...</string>
    <string name="syncing_mentions">Syncing mentions...</string>
    <string name="syncing_direct_messages">Syncing direct messages...</string>
    <string name="syncing_user">Syncing friends...</string>
    <string name="done_syncing">Done with sync.</string>
    <string name="no_network">You aren\'t connected to the internet</string>
    <string name="no_thanks">Not now</string>
    <string name="follow_me">Follow!</string>
    <string name="login_error">Authentication failed, Mastodon has started charging developers for using their service and the cost is unaffordable for small businesses, I bypassed this restriction through other technical means, logging out and back in will work, if you still can\'t log in then please wait for my update</string>
    <string name="compose_activity">New Tweet</string>
    <string name="compose_tweet_hint">Type tweet...</string>
    <string name="send_to">Type user\'s name...</string>
    <string name="direct_message_sent">Direct Message Sent</string>
    <string name="type_user">Type User</string>
    <string name="add_user">Add User</string>
    <string name="location_connected">Location attached</string>
    <string name="location_disconnected">Location lost</string>
    <string name="finding_location">Looking for locations</string>
    <string name="draft_found">Draft found</string>
    <string name="apply">Apply?</string>
    <string name="tweet_failed">Error sending post</string>
    <string name="tap_to_retry">Tap to retry</string>
    <string name="one_recepient">You can only send Direct Messages to one user!</string>
    <string name="discard">Discard</string>
    <string name="send">Send</string>
    <string name="placeholder">Placeholder</string>
    <string name="reply">Reply...</string>
    <string name="error">Error</string>
    <string name="error_loading_page">Error loading web page</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_direct_message">Delete Message?</string>
    <string name="save_image">Image Saved</string>
    <string name="tweet_success">Tweet Successful</string>
    <string name="error_sending_tweet">Error Sending Tweet</string>
    <string name="tweet_to_long">Tweet too long!</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="changelog">What\'s New</string>
    <string name="created_by">Created by</string>
    <string name="no_location">Couldn\'t find location</string>
    <string name="take_picture">Capture Image</string>
    <string name="from_file">Attach Image</string>
    <string name="via">via</string>
    <string name="version">Version</string>
    <string name="from">From</string>
    <string name="save">Save</string>
    <string name="stop">Stop</string>
    <string name="tweeted">tweeted</string>
    <plurals name="followers">
        <item quantity="one">follower</item>
        <item quantity="other">followers</item>
    </plurals>
    <plurals name="following">
        <item quantity="one">following</item>
        <item quantity="other">following</item>
    </plurals>
    <string name="blocked_user">Blocked User</string>
    <string name="unblocked_user">Unblocked User</string>
    <string name="followed_user">Followed User</string>
    <string name="unfollowed_user">Un-Followed User</string>
    <string name="no_description">No user description available.</string>
    <string name="favorite_user">Favorited User</string>
    <string name="unfavorite_user">Un-Favorited User</string>
    <string name="updating_pro_pic">Updating Profile Picture</string>
    <string name="updating_banner_pic">Updating Banner Picture</string>
    <string name="uploaded">File Uploaded</string>
    <string name="change_profile_info">Change Profile Info</string>
    <string name="notifications">Notifications</string>
    <string name="quiet_hours">Do Not Disturb Mode</string>
    <string name="max_number_on_refresh">Max posts to Refresh</string>
    <string name="fav_users_notifications">Favorite User Notifications</string>
    <string name="sync_second_mentions">Sync Second Account</string>
    <string name="sync_second_mentions_summary">Automatically check and notify for new mentions and direct messages on your second account along with the first.</string>
    <string name="max_number_summary">Higher max means a slower refresh.</string>
    <string name="dismiss_all">Dismiss All</string>
    <string name="notification_types">Notification Types</string>
    <string name="favorited_tweet">Likes on your posts</string>
    <string name="new_followers">New followers</string>
    <string name="alert_types">Alert Methods</string>
    <string name="custom_ringtone">Custom Ringtone</string>
    <string name="fetch_tweetmarker">Fetch TweetMarker</string>
    <string name="activity">Activity</string>
    <string name="share_link">Share Link</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="pref_title_public_filter_keywords">Public timelines</string>
    <string name="pref_title_thread_filter_keywords">Conversations</string>
    <string name="pref_title_account_filter_keywords">Profiles</string>
    <string name="label_filter_title">Title</string>
    <string name="filter_description_warn">Hide with a warning</string>
    <string name="filter_description_hide">Hide completely</string>
    <string name="label_filter_action">Filter action</string>
    <string name="label_filter_context">Filter contexts</string>
    <string name="label_filter_keywords">Keywords or phrases to filter</string>
    <string name="action_add">Add</string>
    <string name="label_duration">Duration</string>
    <string name="filter_dialog_whole_word">Whole word</string>
    <string name="filter_dialog_whole_word_description">When the keyword or phrase is alphanumeric only, it will only be applied if it matches the whole word</string>
    <string name="filter_add_description">Phrase to filter</string>
</resources>