<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <allen.town.focus_common.common.prefs.supportv7.ATEPreferenceCategory
        android:layout="@layout/preference_category_title"
        android:key="other_options"
        android:title="@string/sync_options" >

        <allen.town.focus_common.common.prefs.supportv7.ATESwitchPreference
            android:layout="@layout/list_item_view_switch"
            android:key="sync_second_mentions"
            android:title="@string/sync_second_mentions"
            android:summary="@string/sync_second_mentions_summary"
            android:defaultValue="true" />


        <allen.town.focus_common.common.prefs.supportv7.ATEListPreference
            android:layout="@layout/list_item_view"
            android:key="max_tweets"
            android:title="@string/max_number_on_refresh"
            android:summary="@string/max_number_summary"
            android:defaultValue="1"
            android:entries="@array/max_number"
            android:entryValues="@array/max_number_inserted" />


    </allen.town.focus_common.common.prefs.supportv7.ATEPreferenceCategory>

</PreferenceScreen>
