<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.filters.EditFilterActivity">

    <include
        android:id="@+id/includedToolbar"
        layout="@layout/toolbar_basic" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd">

            <allen.town.focus_common.views.AccentTextInputLayout
                android:id="@+id/filter_title_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/label_filter_title">

                <allen.town.focus_common.views.CursorAccentTextInputEditText
                    android:id="@+id/filterTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textNoSuggestions" />
            </allen.town.focus_common.views.AccentTextInputLayout>

            <TextView
                style="@style/TextAppearance.Material3.TitleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_filter_keywords"
                android:textColor="?attr/colorAccent" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/keywordChips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.Chip
                    android:id="@+id/actionChip"
                    style="@style/Widget.MaterialComponents.Chip.Action"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="false"
                    android:text="@string/action_add"
                    app:chipIcon="@drawable/ic_round_add_24"
                    app:chipSurfaceColor="@color/tusky_blue" />
            </com.google.android.material.chip.ChipGroup>

            <TextView
                style="@style/TextAppearance.Material3.TitleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_filter_action"
                android:textColor="?attr/colorAccent" />

            <RadioGroup
                android:id="@+id/filter_action_group"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <allen.town.focus_common.views.AccentRadioButton
                    android:id="@+id/filter_action_warn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/filter_description_warn" />

                <allen.town.focus_common.views.AccentRadioButton
                    android:id="@+id/filter_action_hide"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:text="@string/filter_description_hide" />
            </RadioGroup>

            <TextView
                style="@style/TextAppearance.Material3.TitleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_duration"
                android:textColor="?attr/colorAccent" />

            <Spinner
                android:id="@+id/filterDurationSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/filter_duration_names"
                android:minHeight="48dp" />

            <TextView
                style="@style/TextAppearance.Material3.TitleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/label_filter_context"
                android:textColor="?attr/colorAccent" />

            <allen.town.focus_common.common.views.AccentSwitchMaterial
                android:id="@+id/filter_context_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/title_home" />

            <allen.town.focus_common.common.views.AccentSwitchMaterial
                android:id="@+id/filter_context_notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/title_notifications" />

            <allen.town.focus_common.common.views.AccentSwitchMaterial
                android:id="@+id/filter_context_public"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/pref_title_public_filter_keywords" />

            <allen.town.focus_common.common.views.AccentSwitchMaterial
                android:id="@+id/filter_context_thread"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/pref_title_thread_filter_keywords" />

            <allen.town.focus_common.common.views.AccentSwitchMaterial
                android:id="@+id/filter_context_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/pref_title_account_filter_keywords" />

            <allen.town.focus_common.views.AccentMaterialButton
                android:id="@+id/filter_save_button"
                style="@style/Widget.Material3.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="16dp"
                android:padding="6dp"
                android:text="@string/save" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
