<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <allen.town.focus_common.views.CursorAccentEditText
        android:id="@+id/phraseEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/filter_add_description"
        app:layout_constraintTop_toTopOf="parent" />

    <allen.town.focus_common.common.views.AccentCheckbox
        android:id="@+id/phraseWholeWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_dialog_whole_word"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phraseEditText" />

    <allen.town.focus_common.views.CursorAccentEditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingMultiplier="1.1"
        android:text="@string/filter_dialog_whole_word_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phraseWholeWord" />
</androidx.constraintlayout.widget.ConstraintLayout>